# Clipping

./: .env.example  .gitignore  Caddyfile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: config.py  db.py  main.py
backend/app/api/: auth.py  deps.py  jobs.py  videos.py
backend/app/media/: ffmpeg.py  ytdlp.py
backend/app/models/: __init__.py  base.py  chapter.py  clip.py  cut.py  export.py  job.py  music.py  source_video.py  transcript.py  user.py
backend/app/schemas/: auth.py  job.py  video.py
backend/app/services/: auth_service.py  storage.py
backend/app/tasks/: celery_app.py  db.py  ingest.py  job_utils.py
clipper/: boundaries.py  captions.py  cli.py  config.py  cutter.py  ingest.py  llm_client.py  medium_select.py  models.py  pipeline.py  reframe.py  scenes.py  short_select.py  silence.py  transcribe.py
clipper/web/: app.py  jobs.py
clipper/web/static/: index.html
frontend/: Dockerfile  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: auth.ts  client.ts  types.ts  videos.ts
frontend/src/components/JobStatus/: JobList.tsx
frontend/src/hooks/: useAuth.tsx  useVideo.ts  useVideoJobs.ts
frontend/src/pages/: LoginPage.tsx  SignupPage.tsx  VideoDetailPage.tsx  VideoListPage.tsx
tests/: test_boundaries.py  test_captions.py  test_cutter.py
