[project]
name = "clipper"
version = "0.1.0"
description = "AI-assisted long-form -> medium-form -> short-form video clipper"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "yt-dlp>=2024.8.6",
    "faster-whisper>=1.0.3",
    "scenedetect[opencv]>=0.6.4",
    "anthropic>=0.34",
    "ollama>=0.3.3",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "opencv-contrib-python>=4.10",
    "numpy>=1.26",
    "fastapi>=0.115",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
clipper = "clipper.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["clipper*"]
