[project]
name = "clipping-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "psycopg[binary]>=3.2",
    "alembic>=1.14",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "email-validator>=2.2",
    "celery[redis]>=5.4",
    "redis>=5.2",
    "passlib[bcrypt]>=1.7",
    "itsdangerous>=2.2",
    "python-multipart>=0.0.12",
    "yt-dlp>=2024.11.4",
    "anthropic>=0.39",
    "openai>=1.55",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
